--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-    "name": "@aetheris/source",
-    "version": "0.0.0",
-    "license": "MIT",
-    "private": true,
-    "dependencies": {
-        "@nx/next": "16.3.2",
-        "@swc/helpers": "~0.5.0",
-        "next": "13.4.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "tslib": "^2.3.0"
-    },
-    "devDependencies": {
-        "@nx/eslint-plugin": "16.3.2",
-        "@nx/js": "16.3.2",
-        "@nx/linter": "16.3.2",
-        "@nx/react": "16.3.2",
-        "@nx/workspace": "16.3.2",
-        "@swc/cli": "~0.1.62",
-        "@swc/core": "~1.3.51",
-        "@types/node": "18.14.2",
-        "@types/react": "18.0.28",
-        "@types/react-dom": "18.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
-        "eslint": "~8.15.0",
-        "eslint-config-next": "13.4.1",
-        "eslint-config-prettier": "8.1.0",
-        "eslint-plugin-import": "2.27.5",
-        "eslint-plugin-jsx-a11y": "6.7.1",
-        "eslint-plugin-react": "7.32.2",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "nx": "16.3.2",
-        "prettier": "^2.6.2",
-        "ts-node": "10.9.1",
-        "typescript": "~5.0.2"
-    }
+  "name": "@aetheris/source",
+  "version": "0.0.0",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "@nx/next": "16.3.2",
+    "@sapphire/framework": "^4.4.4",
+    "axios": "^1.0.0",
+    "discord.js": "^14.11.0",
+    "next": "13.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@nx/esbuild": "16.3.2",
+    "@nx/eslint-plugin": "16.3.2",
+    "@nx/js": "16.3.2",
+    "@nx/linter": "16.3.2",
+    "@nx/node": "^16.3.2",
+    "@nx/react": "16.3.2",
+    "@nx/workspace": "16.3.2",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "esbuild": "^0.17.17",
+    "eslint": "~8.15.0",
+    "eslint-config-next": "13.4.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "nx": "16.3.2",
+    "prettier": "^2.6.2",
+    "ts-node": "10.9.1",
+    "typescript": "~5.0.2"
+  }
 }
