--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,9 +14,7 @@
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
-        "paths": {
-            "@aetheris/aetheris-bot": ["libs/aetheris-bot/src/index.ts"]
-        }
+        "paths": {}
     },
     "exclude": ["node_modules", "tmp"]
 }
