--- a/apps/aetheris-bot/project.json
+++ b/apps/aetheris-bot/project.json
@@ -57,6 +57,26 @@
             "options": {
                 "lintFilePatterns": ["apps/aetheris-bot/**/*.ts"]
             }
+        },
+        "version": {
+            "executor": "@jscutlery/semver:version",
+            "options": {
+                "push": true,
+                "noVerify": true,
+                "baseBranch": "master",
+                "postTargets": ["aetheris-bot:github"],
+                "changelogHeader": "# Changelog\nAll notable changes to this project will be documented in this file.",
+                "commitMessageFormat": "chore(${projectName}): release ${version}"
+            }
+        },
+        "github": {
+            "executor": "@jscutlery/semver:github",
+            "options": {
+                "tag": "${tag}",
+                "notes": "${notes}",
+                "target": "master",
+                "notesStartTag": "${previousTag}"
+            }
         }
     },
     "tags": []
