--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@jscutlery/semver": "^3.0.0",
     "@nx/esbuild": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/js": "16.3.2",
