--- a/package.json
+++ b/package.json
@@ -1,43 +1,55 @@
 {
-  "name": "@aetheris/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "@nx/next": "16.3.2",
-    "@sapphire/framework": "^4.4.4",
-    "axios": "^1.0.0",
-    "discord.js": "^14.11.0",
-    "next": "13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@jscutlery/semver": "^3.0.0",
-    "@nx/esbuild": "16.3.2",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/js": "16.3.2",
-    "@nx/linter": "16.3.2",
-    "@nx/node": "^16.3.2",
-    "@nx/react": "16.3.2",
-    "@nx/workspace": "16.3.2",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "esbuild": "^0.17.17",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "nx": "16.3.2",
-    "prettier": "^2.6.2",
-    "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
-  }
+    "name": "@aetheris/source",
+    "version": "0.0.0",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "@nestjs/common": "^9.1.1",
+        "@nestjs/core": "^9.1.1",
+        "@nestjs/platform-express": "^9.1.1",
+        "@nx/next": "16.3.2",
+        "@prisma/client": "^4.5.0",
+        "@sapphire/framework": "^4.4.4",
+        "axios": "^1.0.0",
+        "discord.js": "^14.11.0",
+        "next": "13.4.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^7.8.0",
+        "tslib": "^2.3.0"
+    },
+    "devDependencies": {
+        "@jscutlery/semver": "^3.0.0",
+        "@nestjs/schematics": "^9.1.0",
+        "@nestjs/testing": "^9.1.1",
+        "@nx-tools/nx-prisma": "^4.0.3",
+        "@nx/esbuild": "16.3.2",
+        "@nx/eslint-plugin": "16.3.2",
+        "@nx/js": "16.3.2",
+        "@nx/linter": "16.3.2",
+        "@nx/nest": "16.3.2",
+        "@nx/node": "^16.3.2",
+        "@nx/react": "16.3.2",
+        "@nx/webpack": "16.3.2",
+        "@nx/workspace": "16.3.2",
+        "@types/node": "18.14.2",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
+        "esbuild": "^0.17.17",
+        "eslint": "~8.15.0",
+        "eslint-config-next": "13.4.1",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-import": "2.27.5",
+        "eslint-plugin-jsx-a11y": "6.7.1",
+        "eslint-plugin-react": "7.32.2",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "nx": "16.3.2",
+        "prettier": "^2.6.2",
+        "prisma": "^4.5.0",
+        "ts-node": "10.9.1",
+        "typescript": "~5.0.2"
+    }
 }
