--- a/package.json
+++ b/package.json
@@ -4,34 +4,33 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "@nestjs/common": "^9.1.1",
-        "@nestjs/core": "^9.1.1",
-        "@nestjs/platform-express": "^9.1.1",
+        "@fastify/autoload": "~5.7.1",
+        "@fastify/sensible": "~5.2.0",
         "@nx/next": "16.3.2",
         "@prisma/client": "^4.5.0",
         "@sapphire/framework": "^4.4.4",
+        "@trpc/client": "^10.29.1",
+        "@trpc/server": "^10.29.1",
         "axios": "^1.0.0",
         "discord.js": "^14.11.0",
+        "fastify": "^4.17.0",
+        "fastify-plugin": "~4.5.0",
         "next": "13.4.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.0",
-        "tslib": "^2.3.0"
+        "superjson": "^1.12.3",
+        "tslib": "^2.5.3",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@jscutlery/semver": "^3.0.0",
-        "@nestjs/schematics": "^9.1.0",
-        "@nestjs/testing": "^9.1.1",
         "@nx-tools/nx-prisma": "^4.0.3",
         "@nx/esbuild": "16.3.2",
         "@nx/eslint-plugin": "16.3.2",
         "@nx/js": "16.3.2",
         "@nx/linter": "16.3.2",
-        "@nx/nest": "16.3.2",
         "@nx/node": "^16.3.2",
         "@nx/react": "16.3.2",
-        "@nx/webpack": "16.3.2",
         "@nx/workspace": "16.3.2",
         "@types/node": "18.14.2",
         "@types/react": "18.0.28",
