--- a/libs/trpc/tsconfig.lib.json
+++ b/libs/trpc/tsconfig.lib.json
@@ -2,9 +2,9 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
-        "module": "commonjs",
+        "declaration": true,
         "types": ["node"]
     },
-    "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
