--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -9,17 +9,14 @@ on:
 jobs:
     main:
         name: Nx Cloud - Main Job
-        uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.13.0
-        with:
-            main-branch-name: master
-            number-of-agents: 3
-            init-commands: |
-                yarn exec nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
-            parallel-commands: |
-                yarn exec nx-cloud record -- yarn exec nx format:check
-            parallel-commands-on-agents: |
-                yarn exec nx affected --target=lint --parallel=3
-                yarn exec nx affected --target=build --parallel=3
+        runs-on: ubuntu-latest
+        steps:
+            - uses: nrwl/nx-set-shas@v3
+            - uses: bahmutov/npm-install@v1
+
+            - run: yarn nx format:check
+            - run: yarn nx affected -t lint --parallel=3
+            - run: yarn nx affected -t build --parallel=3
 
     agents:
         name: Nx Cloud - Agents
