--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -6,6 +6,11 @@ on:
             - master
     pull_request:
 
+permissions:
+    contents: read
+    packages: write
+    actions: read
+
 jobs:
     main:
         name: Nx Cloud - Main Job
