--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
         "prisma": "^4.5.0",
         "ts-node": "10.9.1",
         "typescript": "~5.0.2"
-    }
+    },
+    "packageManager": "yarn@3.6.0"
 }
