feat(aetheris-lib): move prisma to @aetheris/db instead

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
+            "@aetheris/db": ["libs/db/src/index.ts"],
             "@aetheris/trpc": ["libs/trpc/src/index.ts"]
         }
     },
