--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     },
     "dependencies": {
         "@fastify/autoload": "~5.7.1",
+        "@fastify/cors": "^8.3.0",
         "@fastify/sensible": "~5.2.0",
         "@nx/next": "16.3.2",
         "@prisma/client": "^4.5.0",
         "@sapphire/framework": "^4.4.4",
+        "@tanstack/react-query": "^4.29.12",
         "@trpc/client": "^10.29.1",
+        "@trpc/next": "^10.29.1",
+        "@trpc/react-query": "^10.29.1",
         "@trpc/server": "^10.29.1",
         "axios": "^1.0.0",
         "discord.js": "^14.11.0",
         "fastify": "^4.17.0",
         "fastify-plugin": "~4.5.0",
-        "next": "13.4.1",
+        "next": "^13.4.4",
+        "pino-pretty": "^10.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "superjson": "^1.12.3",
