--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "fastify": "^4.17.0",
         "fastify-plugin": "~4.5.0",
         "next": "^13.4.4",
+        "next-auth": "^4.22.1",
         "pino-pretty": "^10.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
