--- a/apps/aetheris-api/project.json
+++ b/apps/aetheris-api/project.json
@@ -66,7 +66,7 @@
                 "push": true,
                 "noVerify": true,
                 "baseBranch": "master",
-                "postTargets": ["aetheris-bot:github"],
+                "postTargets": ["aetheris-api:github"],
                 "changelogHeader": "# Changelog\nAll notable changes to this project will be documented in this file.",
                 "commitMessageFormat": "chore(${projectName}): release ${version}"
             }
