--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fastify/sensible": "~5.2.0",
         "@nx/next": "16.3.2",
         "@prisma/client": "^4.5.0",
+        "@sapphire/discord.js-utilities": "^7.0.0",
         "@sapphire/framework": "^4.4.4",
         "@tanstack/react-query": "^4.29.12",
         "@trpc/client": "^10.29.1",
