feat(aetheris-bot): add custom extended bot client

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
         "baseUrl": ".",
         "paths": {
             "@aetheris/db": ["libs/db/src/index.ts"],
+            "@aetheris/lib": ["libs/lib/src/index.ts"],
             "@aetheris/trpc": ["libs/trpc/src/index.ts"]
         }
     },
