--- a/libs/lib/.eslintrc.json
+++ b/libs/lib/.eslintrc.json
@@ -4,7 +4,10 @@
     "overrides": [
         {
             "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-            "rules": {}
+            "rules": {
+                "@typescript-eslint/no-namespace": "off",
+                "@typescript-eslint/ban-ts-comment": "off"
+            }
         },
         {
             "files": ["*.ts", "*.tsx"],
